# AnkiAssets

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  todo.txt
.github/workflows/: release.yml
addon/: __init__.py  manifest.json  meta.json
addon/src/: addon.py  config.py  helpers.py  views.py
addon/user_files/: assets.json
addon/user_files__dev/: assets.json
addon/user_files__dev/assets/js/: card.js
addon/user_files_dev/: assets.json
addon/user_files_dev/assets/css/: card.css  field.css
anki-assets/src/: __init__.py  config.py  defaults.py  preferences.py
ankiassets/: __init__.py  meta.json
ankiassets/src/: __init__.py
bundle/: AnkiAssets.ankiaddon  anki-assets.ankiaddon
docs/: publishing-a-release.md
scripts/: bundle.sh  link.sh  precommit.sh  unlink.sh
